@@ -19,6 +19,7 @@ Other contributors, listed alphabetically, are:
 * Martin Mahner -- nature theme
 * Will Maier -- directory HTML builder
 * Roland Meister -- epub builder
+* Ezio Melotti -- collapsible sidebar JavaScript
 * Daniel Neuhäuser -- JavaScript domain
 * Christopher Perkins -- autosummary integration
 * Benjamin Peterson -- unittests
